WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188950
CSS reference filter that references a tiled feTurbulence is blank
https://bugs.webkit.org/show_bug.cgi?id=188950
Summary
CSS reference filter that references a tiled feTurbulence is blank
Simon Fraser (smfr)
Reported
2018-08-25 20:40:46 PDT
https://codepen.io/yoksel/pen/BOjmqj?editors=1000
shows blank in WebKit (macOS and iOS). It works in Firefox.
Attachments
Reduction
(581 bytes, text/html)
2018-08-31 20:45 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(16.72 KB, patch)
2018-09-03 22:16 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(16.71 KB, patch)
2018-09-04 13:51 PDT
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
Patch
(16.75 KB, patch)
2018-09-04 14:44 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-08-25 20:41:13 PDT
<
rdar://problem/43724286
>
Simon Fraser (smfr)
Comment 2
2018-08-28 21:02:10 PDT
In debug builds we assert: ASSERTION FAILED: tileWidth > 0 && tileHeight > 0 ./platform/graphics/filters/FETurbulence.cpp(188) : FETurbulence::StitchData WebCore::FETurbulence::computeStitching(WebCore::IntSize, float &, float &) const 1 0x116495479 WTFCrash 2 0x105b0fe4b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x1088fd976 WebCore::FETurbulence::computeStitching(WebCore::IntSize, float&, float&) const 4 0x1088ff138 WebCore::FETurbulence::platformApplySoftware() 5 0x1089005a4 WebCore::FilterEffect::apply()
Simon Fraser (smfr)
Comment 3
2018-08-28 21:05:37 PDT
If we early return to avoid the assertion, the content renders, but the turbulence seems to have the wrong resolution on Retina displays.
Simon Fraser (smfr)
Comment 4
2018-08-31 20:45:41 PDT
Created
attachment 348704
[details]
Reduction Seems related to stitchTiles="stitch" on feTurbulence
Simon Fraser (smfr)
Comment 5
2018-08-31 21:02:18 PDT
tile size is computed from filterPrimitiveSubregion, which we never compute for CSS filters.
Simon Fraser (smfr)
Comment 6
2018-09-03 22:16:45 PDT
Comment hidden (obsolete)
Created
attachment 348806
[details]
Patch
Simon Fraser (smfr)
Comment 7
2018-09-03 22:17:04 PDT
Comment hidden (obsolete)
Comment on
attachment 348806
[details]
Patch Depends on the patch in
bug 189248
.
Simon Fraser (smfr)
Comment 8
2018-09-04 13:51:42 PDT
Created
attachment 348844
[details]
Patch
Simon Fraser (smfr)
Comment 9
2018-09-04 14:44:13 PDT
Created
attachment 348848
[details]
Patch
WebKit Commit Bot
Comment 10
2018-09-04 15:51:54 PDT
Comment on
attachment 348848
[details]
Patch Clearing flags on attachment: 348848 Committed
r235644
: <
https://trac.webkit.org/changeset/235644
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug