Source/WebCore/platform/graphics/filters/Filter.h
@@ -20,10 +20,15 @@
 
 #pragma once
 
-#include "FloatSize.h"
+#include "AffineTransform.h"
+#include "FloatRect.h"
+#include "GraphicsTypes.h"
 #include "ImageBuffer.h"
+#include <wtf/RefCounted.h>
 
 namespace WebCore {
+
+class FilterEffect;
 
 class Filter : public RefCounted<Filter> {
 public:
@@ -54,6 +59,7 @@ public:
     
     virtual FloatRect sourceImageRect() const = 0;
     virtual FloatRect filterRegion() const = 0;
+    virtual FloatRect filterRegionInUserSpace() const = 0;
 
 protected:
     explicit Filter(const FloatSize& filterResolution)
