Source/WebCore/rendering/svg/RenderSVGResourceFilterPrimitive.cpp
@@ -73,48 +73,4 @@ void RenderSVGResourceFilterPrimitive::styleDidChange(StyleDifference diff, cons
     }
 }
 
-FloatRect RenderSVGResourceFilterPrimitive::determineFilterPrimitiveSubregion(FilterEffect& effect)
-{
-    auto& filter = downcast<SVGFilter>(effect.filter());
-
-    // FETile, FETurbulence, FEFlood don't have input effects, take the filter region as unite rect.
-    FloatRect subregion;
-    if (unsigned numberOfInputEffects = effect.inputEffects().size()) {
-        subregion = determineFilterPrimitiveSubregion(*effect.inputEffect(0));
-        for (unsigned i = 1; i < numberOfInputEffects; ++i)
-            subregion.unite(determineFilterPrimitiveSubregion(*effect.inputEffect(i)));
-    } else
-        subregion = filter.filterRegionInUserSpace();
-
-    // After calling determineFilterPrimitiveSubregion on the target effect, reset the subregion again for <feTile>.
-    if (effect.filterEffectType() == FilterEffectTypeTile)
-        subregion = filter.filterRegionInUserSpace();
-
-    FloatRect effectBoundaries = effect.effectBoundaries();
-    if (effect.hasX())
-        subregion.setX(effectBoundaries.x());
-    if (effect.hasY())
-        subregion.setY(effectBoundaries.y());
-    if (effect.hasWidth())
-        subregion.setWidth(effectBoundaries.width());
-    if (effect.hasHeight())
-        subregion.setHeight(effectBoundaries.height());
-
-    effect.setFilterPrimitiveSubregion(subregion);
-
-    FloatRect absoluteSubregion = filter.absoluteTransform().mapRect(subregion);
-    FloatSize filterResolution = filter.filterResolution();
-    absoluteSubregion.scale(filterResolution);
-    // Save this before clipping so we can use it to map lighting points from user space to buffer coordinates.
-    effect.setUnclippedAbsoluteSubregion(absoluteSubregion);
-
-    // Clip every filter effect to the filter region.
-    FloatRect absoluteScaledFilterRegion = filter.filterRegion();
-    absoluteScaledFilterRegion.scale(filterResolution);
-    absoluteSubregion.intersect(absoluteScaledFilterRegion);
-
-    effect.setMaxEffectRect(absoluteSubregion);
-    return subregion;
-}
-
 } // namespace WebCore
