Source/WebCore/svg/graphics/filters/SVGFilter.h
@@ -33,7 +33,7 @@ class SVGFilter final : public Filter {
 public:
     static Ref<SVGFilter> create(const AffineTransform&, const FloatRect&, const FloatRect&, const FloatRect&, bool);
 
-    FloatRect filterRegionInUserSpace() const { return m_filterRegion; }
+    FloatRect filterRegionInUserSpace() const final { return m_filterRegion; }
     FloatRect filterRegion() const final { return m_absoluteFilterRegion; }
 
     FloatSize scaledByFilterResolution(FloatSize) const final;
